[package]
name = "rust-multiplatform"
version = "0.1.0"
edition = "2021"

[features]
default = ["android"]
android = ["dep:jni", "dep:android_logger"]
ohos = ["dep:ohos-node-bindgen", "dep:socket2"]
ios = []

[dependencies]
jni = { version = "0.21.1", optional = true }
android_logger = { version = "0.14.1", optional = true }

ohos-node-bindgen = { version = "6.0.3", optional = true }
socket2 = { version = "0.5.7", optional = true }

dashmap = "6.0.1"
threadpool = "1.8.1"
log = "0.4.21"

[lib]
crate-type = ["staticlib", "cdylib"]

#[patch.crates-io]
#socket2 = { version = "0.4.10", git = "https://github.com/stuartZhang/socket2.git", branch = "v0.4.x" }
